<resources>
    <string name="app_name">LanguageApp</string>
    <string name="labelHindi">Hindi:</string>
    <string name="labelEnglish">English:</string>
    <string name="labelGender">Gender:</string>
    <string name="checkBoxLabel">Male</string>
    <string name="checkBoxLabel2">Female</string>
    <string name="typeLabel">Word type:</string>
    <string name="sentenceHindiLabel">Example sentence (Hindi):</string>
    <string name="sentenceEngLabel">Example sentence (English):</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonSearch">Search</string>
    <string name="radioValueMale">Male</string>
    <string name="radioButtonValue2">Female</string>
    <string name="checkBoxDifficult">Difficult</string>
    <string name="RemoveWord">remove_word</string>
    <string name="Remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="save_changes">Save changes</string>
    <string name="main">Main</string>
    <string name="addNewWord">Add new word</string>
    <string name="wordInformation">Word information</string>
    <string name="allWords">All words</string>
    <string name="editWord">Edit word</string>
    <string name="difficultWords">Difficult words</string>
</resources>
